// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Video Thumbnail Component Prop - aspect_ratio items: 1:1 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-1:1">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - aspect_ratio items: 4:3 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-4:3">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - aspect_ratio items: 16:9 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - border_radius items: large 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-large c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - border_radius items: none 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - border_radius items: small 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-small c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - button_attributes 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <button data-test-attributes="Test Data"
          class="c-bolt-video-thumbnail__inline-button"
          type="button"
          aria-label="Play the video"
  >
    <div class="c-bolt-video-thumbnail__content">
      /fixtures/1200x660.jpg
    </div>
    <div class="c-bolt-video-thumbnail__play-icon"
         aria-hidden="true"
    >
    </div>
  </button>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - static display 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - video.content 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9 c-bolt-video-thumbnail--inline">
  <button class="js-bolt-video-thumbnail-inline-button c-bolt-video-thumbnail__inline-button"
          type="button"
          aria-label="Play the video Video Title Inline Play"
  >
    <div class="c-bolt-video-thumbnail__content">
      /fixtures/1200x660.jpg
    </div>
    <div class="c-bolt-video-thumbnail__play-icon"
         aria-hidden="true"
    >
    </div>
  </button>
  <div class="c-bolt-video-thumbnail__content-video js-bolt-video-thumbnail-content-video">
    <video-js data-account="1900410236"
              data-player="O3FkeBiaDz"
              data-embed="default"
              data-video-id="4892122320001"
              controls
              class="c-base-video"
    >
    </video-js>
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - video.duration 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
  <div class="c-bolt-video-thumbnail__meta c-bolt-video-thumbnail__meta--bottom">
    <div class="c-bolt-video-thumbnail__duration">
      <span class="u-bolt-visuallyhidden">
        Video duration:
      </span>
      3:55
    </div>
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - video.has_subtitles 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
  <div class="c-bolt-video-thumbnail__meta c-bolt-video-thumbnail__meta--bottom">
    <div class="c-bolt-video-thumbnail__subtitles"
         aria-label="Subtitles available"
    >
      <svg class="e-bolt-icon e-bolt-icon--small"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 32 32"
           aria-hidden="true"
      >
        <path fill="#151619"
              d="M29.8 5.2H2.2C1 5.2 0 6.3 0 7.4v17.2c0 1.2 1 2.2 2.2 2.2h27.6c1.2 0 2.2-1 2.2-2.2V7.4c0-1.1-1-2.2-2.2-2.2zM5.7 11.4H9c.8 0 1.4.6 1.4 1.4s-.5 1.3-1.4 1.3H5.7c-.7 0-1.3-.6-1.3-1.4s.6-1.3 1.3-1.3zM17.9 21H5.8c-.8 0-1.4-.6-1.4-1.4 0-.7.6-1.3 1.3-1.3h12.1c.8 0 1.4.6 1.5 1.3-.1.8-.6 1.4-1.4 1.4zm8.4.1H23c-.8 0-1.4-.6-1.4-1.4s.6-1.4 1.4-1.4h3.4c.7 0 1.3.6 1.4 1.4-.1.8-.7 1.4-1.5 1.4zm0-7.2h-12c-.6 0-1.2-.6-1.4-1.4 0-.8.6-1.4 1.4-1.4h12.1c.7 0 1.3.6 1.4 1.4-.1.8-.7 1.4-1.5 1.4z"
        >
        </path>
      </svg>
      <span class="u-bolt-visuallyhidden">
        Subtitles available
      </span>
    </div>
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component Prop - video.show_title 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__meta c-bolt-video-thumbnail__meta--top">
    <span class="c-bolt-video-thumbnail__title">
      Video Title Display
    </span>
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;

exports[`Bolt Video Thumbnail Component default 1`] = `
<div class="c-bolt-video-thumbnail c-bolt-video-thumbnail--border-radius-none c-bolt-video-thumbnail--aspect-ratio-16:9">
  <div class="c-bolt-video-thumbnail__content">
    /fixtures/1200x660.jpg
  </div>
  <div class="c-bolt-video-thumbnail__play-icon"
       aria-hidden="true"
  >
  </div>
</div>
`;
